ossm/3scale-wasm/serviceentry-backendURL.yml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
 labels:
   app: ''
 name: system-entry-apimgr-backend
spec:
 hosts:
   - %API_MGMT_BACKEND_HOST%
 location: MESH_EXTERNAL
 ports:
   - name: https
     number: 443
     protocol: HTTPS
 resolution: DNS
